# accounting

./: LICENSE  README.md  db.json  package.json  pnpm-lock.yaml  tsconfig.node.json
src/: App.css  App.tsx  error-page.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/logger/: Cargo.toml
src-tauri/logger/src/: lib.rs
src-tauri/src/: main.rs  utils.rs
src-tauri/src/commands/: client_command.rs  invoice_command.rs  mod.rs  product_command.rs
src-tauri/src/db/: mod.rs
src-tauri/src/schema/: client.rs  client_schema.rs  collections.rs  error.rs  invoice_schema.rs  mod.rs  product_schema.rs
src/api/: index.ts  queries.ts  qurieskeys.ts
src/components/: app-sidebar.tsx  columns.tsx  data-table.tsx
src/components/forms/: ClientForm.tsx  InvoiceForm.tsx  ItemsForm.tsx  ProductForm.tsx
src/components/shared/: AlertDialogButton.tsx  ClinetCardInfo.tsx  DialogCloseButton.tsx  ErrorResponsePage.tsx  InvoicePrint.tsx  InvoiceUpdate.tsx  NavigationButtons.tsx  NewClient.tsx  NewInvoice.tsx  NewProduct.tsx  NewStore.tsx  Overview.tsx  PrintButton.tsx  ProductId.tsx  RecentSales.tsx  Spiner.tsx  UpdateClient.tsx  UpdateProduct.tsx
src/components/skeleton/: ClientDetailsSkeleton.tsx  ClientSkeleton.tsx  DashboardSkeleton.tsx  InvoiceDetailsSkeleton.tsx  InvoiceSkeleton.tsx  ProductDetailSkeleton.tsx  StoreSkeleton.tsx
src/components/ui/: toast.tsx
src/lib/: utils.ts  validation.ts
src/routes/: Clinets.tsx  ClinetsId.tsx  InvoiceDetails.tsx  Invoices.tsx  Sotre.tsx  dashboard.tsx
src/types/: index.ts
