[package]
name = "accounting"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = ["serde"] }


[dependencies.mongodb]
version = "3.1.0"
